# AIGIDetectionZOO

./: .gitignore  LICENSE  README.md  pyproject.toml
aigidetection_zoo/: __init__.py  api.py
aigidetection_zoo.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
aigidetection_zoo/LGrad/: lgrad_api.py
aigidetection_zoo/PatchCraft/: patchcraft_api.py
aigidetection_zoo/PatchCraft/networks/: RPTC.py  __init__.py
aigidetection_zoo/PatchCraft/weights/: RPTC.pth
