[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aigidetection-zoo"        
version = "0.1.1.dev2"                
authors = [
  { name="Su Linxiang", email="su_linxiang@126.com" }
]
description = "AIGIDetectionZOO provides APIs of extensive AIGI detectors in research literature, ranging from naive CNN to state-of-the-art. Contributions are always welcome!"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.20,<2.0",
    "scipy>=1.7",
    "scikit-learn>=0.24",
    "opencv-python<4.12",
    "Pillow>=8.0",
    "torch>=1.8",
    "torchvision>=0.9"
]



[project.urls]
"Homepage" = "https://github.com/kylin0421/AIGIDetectionZOO"
"Bug Tracker" = "https://github.com/kylin0421/AIGIDetectionZOO/issues"
